feat: create table.template

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>WG Forge Test</title>
+    <style>
+        table {
+            border-collapse: collapse;
+        }
+        th, tr {
+            border: 1px solid red;
+        }
+    </style>
 </head>
 <body>
     <div id="app"></div>
