--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,9 @@
     <style>
         table {
             border-collapse: collapse;
+            width: 100%;
         }
-        th, tr {
+        th, tr, td {
             border: 1px solid red;
         }
     </style>
