--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
         }
         th, tr, td {
             border: 1px solid red;
+            padding: 2px 3px;
         }
     </style>
 </head>
