feat: add userDetails

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,10 @@
             border: 1px solid red;
             padding: 2px 3px;
         }
+
+        .user-details {display: none;}
+
+        .view {display: flex;}
     </style>
 </head>
 <body>
