feat: Sort function

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,19 @@
             border-collapse: collapse;
             width: 100%;
         }
+
+
+        th {
+            cursor: pointer;
+
+
+        }
+
+        th:hover {
+            background: red;
+            
+        }
+
         th, tr, td {
             border: 1px solid red;
             padding: 2px 3px;
